--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,82 @@
-body {
-    background-color: bisque;
+header {
+  width: 80vw;
+  height: 8vh;
+  border: 1px solid #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem auto;
+  padding: 0 2rem;
+  font-size: 2rem;
+  z-index: 1;
 }
 
-.hello {
-	color: red;
-  }
+.list-item a {
+  text-decoration: none;
+}
+
+.like-icon {
+  width: 2.5rem;
+  vertical-align: middle;
+  margin: 0 1.5rem 0.4rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+h3 {
+  margin-left: 130px;
+}
+
+h4 {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 100px;
+}
+
+h2 {
+  text-align: center;
+}
+
+.itemCard {
+  text-decoration: none;
+  list-style: none;
+  background-color: aquamarine;
+  border-radius: 4%;
+}
+
+.nav-items {
+  display: flex;
+  list-style: none;
+  gap: 4rem;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.cardimage {
+  display: block;
+  max-width: 30rem;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: 0.4s;
+  background-color: beige;
+  margin: 10px;
+}
+
+.btn {
+  width: 50%;
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 7px;
+  font-size: 1rem;
+  transition: 0.4s;
+  margin-bottom: 10px;
+  margin-left: 100px;
+}
