--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,234 @@
 body {
-  background-color: bisque;
+  font-family: 'Poppins', sans-serif;
+  background: rgb(255, 240, 221);
 }
 
-.hello {
+header {
+  width: 100%;
+  height: 8vh;
+  border: 1px solid aquamarine;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem auto;
+  font-size: 2rem;
+  z-index: 1;
+}
+
+.list-item a {
+  text-decoration: none;
+  color: black;
+  margin-right: 30px;
+}
+
+.like-icon {
+  width: 2.5rem;
+  vertical-align: middle;
+  margin: 0 1.5rem 0.4rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+h3 {
+  margin-left: 130px;
+}
+
+h4 {
+  margin-left: 100px;
+}
+
+h2 {
+  text-align: center;
+}
+
+.itemCard {
+  text-decoration: none;
+  list-style: none;
+  background-color: aquamarine;
+  border-radius: 4%;
+  cursor: pointer;
+  padding: 8px;
+}
+
+.itemCard:hover {
+  transform: scale(1.03);
+  transition: 0.3s ease-in-out;
+}
+
+.nav-items {
+  display: flex;
+  list-style: none;
+  gap: 4rem;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.foodCards {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: auto auto auto;
+  padding: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardimage {
+  display: block;
+  max-width: 24rem;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: 0.4s;
+  background-color: beige;
+  margin: 10px;
+}
+
+.btn {
+  width: 50%;
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 7px;
+  transition: 0.4s;
+  margin-bottom: 10px;
+  margin-left: 100px;
+  border: none;
+  outline: none;
+  font-size: 19px;
+  box-shadow: 0 4px 5px black;
+  text-align: center;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+}
+
+.popupcontainer {
+  background: aquamarine;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+}
+
+.popup {
+  overflow: scroll;
+  overflow-x: hidden;
+  display: none;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  align-items: center;
+  backdrop-filter: blur(15px);
+}
+
+.food-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.likeCalculation {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.likeSymbol {
+  font-size: 30px;
   color: red;
+}
+
+.sub-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.sub-cont2 {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  height: 30px;
+}
+
+.close {
+  width: 5%;
+  align-self: flex-end;
+}
+
+.popImg {
+  max-width: 85%;
+  border-radius: 20px;
+}
+
+.FoodName {
+  font-size: 30px;
+  color: black;
+  align-self: center;
+}
+
+.ingredients {
+  font-size: 26px;
+  margin-bottom: 20px;
+}
+
+.ingredientC {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.commentTitle {
+  font-size: 20px;
+}
+
+.comments p {
+  font-size: 17px;
+}
+
+.flexForm {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.username {
+  width: 30%;
+  padding: 8px;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+#msg {
+  width: 30%;
+  padding: 8px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+}
+
+#msg::placeholder {
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.submit {
+  width: 13%;
+  padding: 8px 10px;
+  font-size: 16px;
+  text-align: center;
+}
+
+#footer {
+  display: flex;
+  justify-content: center;
+  border: 1px solid aquamarine;
 }
