--- a/src/style.css
+++ b/src/style.css
@@ -232,3 +232,9 @@ h2 {
   justify-content: center;
   border: 1px solid aquamarine;
 }
+
+.logo a {
+  text-decoration: none;
+  color: rgb(160, 0, 0);
+  font-size: 18px;
+}
